# labsOOP_2

./: CMakeLists.txt  main.cpp  task.cpp  task.h  test.cpp
uncorrect/: main.cpp  task.cpp
